# GCsnap

./: .gitignore  README.md  config.yaml  example_usage.ipynb  pyproject.toml  target_sequences_100.txt
create_db_scripts/: assembly_db.job  assembly_db.sh  create_db_uniport.out  sequence_update.job  sequence_update.sh  uniprot_mappings_db.job  uniprot_mappings_db.sh  update_seq_10.out
default/: timing.csv
download_scripts/: rsync.sh  rsync_genbank.sh  rsync_refseq.sh
examples/ybez_KHI/: config.yaml
examples/ybez_KHI/targets_ybez_selected/: all_syntenies.json  genomic_context_information.json  mapping.csv  protein_families_summary.json  selected_operons.json  targets_ybez_selected_interactive_output.html  targets_ybez_selected_operon_types_summary.txt  targets_ybez_selected_protein_families_summary.txt  targets_ybez_selected_summary_table.tab  taxonomy.json
examples/ybez_KHI/targets_ybez_selected/targets_ybez_selected_all_against_all_searches/: flanking_sequences.fasta  flanking_sequences_0.001.mmseqs
examples/yqlc_KHII/: config.yaml
examples/yqlc_KHII/clans_cluster/: config.yaml
examples/yqlc_KHII/clans_cluster/cluster1_cyanobacteria/: all_syntenies.json  cluster1_cyanobacteria_interactive_output.html  cluster1_cyanobacteria_operon_types_summary.txt  cluster1_cyanobacteria_protein_families_summary.txt  cluster1_cyanobacteria_summary_table.tab  genomic_context_information.json  mapping.csv  protein_families_summary.json  selected_operons.json  taxonomy.json
examples/yqlc_KHII/clans_cluster/cluster2_allothers/: all_syntenies.json  cluster2_allothers_interactive_output.html  genomic_context_information.json  (+7 more)
examples/yqlc_KHII/yqlc_nostoc_blast_nrbac70/: all_syntenies.json  genomic_context_information.json  mapping.csv  protein_families_summary.json  selected_operons.json  taxonomy.json  yqlc_nostoc_blast_nrbac70_advanced_operons_interactive_output_GC Type -0001.html  yqlc_nostoc_blast_nrbac70_advanced_operons_interactive_output_GC Type 00000.html  yqlc_nostoc_blast_nrbac70_advanced_operons_interactive_output_GC Type 00001.html  yqlc_nostoc_blast_nrbac70_advanced_operons_interactive_output_GC Type 00002.html  yqlc_nostoc_blast_nrbac70_advanced_operons_interactive_output_GC Type 00003.html  yqlc_nostoc_blast_nrbac70_advanced_operons_interactive_output_GC Type 00004.html  yqlc_nostoc_blast_nrbac70_advanced_operons_interactive_output_GC Type 00005.html  yqlc_nostoc_blast_nrbac70_advanced_operons_interactive_output_GC Type 00006.html  yqlc_nostoc_blast_nrbac70_advanced_operons_interactive_output_GC Type 00007.html  yqlc_nostoc_blast_nrbac70_advanced_operons_interactive_output_GC Type 00008.html  yqlc_nostoc_blast_nrbac70_advanced_operons_interactive_output_GC Type 00009.html  yqlc_nostoc_blast_nrbac70_advanced_operons_output_summary.html  yqlc_nostoc_blast_nrbac70_operon_types_summary.txt  yqlc_nostoc_blast_nrbac70_protein_families_summary.txt  yqlc_nostoc_blast_nrbac70_summary_table.tab
gcsnap/: GCsnap.py  __init__.py  __main__.py  apis.py  assemblies.py  assemblies_for_cluster.ipynb  assembly_links.py  config.yaml  configuration.py  db_create.py  db_create_assemblies.py  db_create_uniprot_mappings.py  db_handler_assemblies.py  db_handler_sequences.py  db_handler_uniprot_mappings.py  db_update_sequences.py  entrez_query.py  example_usage.ipynb  examples.ipynb  families.py  families_functions_structures.py  figure.py  figure_genomic_context.py  figure_interactive.py  figure_interactive_advanced.py  figures.py  genomic_context.py  mapping.py  mmseqs_cluster.py  operons.py  parallel_tools.py  possible_redundant_arguments.txt  rich_console.py  sequence_mapping.py  sequence_mapping_online.py  sequences.py  slurm_control.py  syntenies.py  target_sequences_10.txt  targets.py  (+6 more)
slurm_scripts/: gcsnap.job  gcsnap.sh
(+5 files in other folders)
