
[project]
name = "gcsnap"
version = "1.0.17"
description = "GCsnap: Interactive snapshots for the comparison of protein-coding genomic contexts"
authors = [
    {name = "Joana Pereira", email = "pereira.joanam@gmail.com"},
]
dependencies = [
    "urllib3 == 2.2.1",
    "pandas == 2.2.2",
    "biopython == 1.83",
    "bokeh == 1.3.4",
    "matplotlib == 3.9",
    "networkx==3.3",
    "numpy == 1.26.4",
    "pacmap == 0.7.3",
    "scikit-learn == 1.5.1",
    "jinja2==3.0",
    "numba==0.56.4"
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}
keywords = ["genomic contexts homology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/JoanaMPereira/GCsnap"

[project.scripts]
GCsnap = "gcsnap.GCsnap:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gcsnap"]
