
[project]
name = "gcsnap"
version = "1.0.17"
description = "GCsnap: Interactive snapshots for the comparison of protein-coding genomic contexts"
authors = [
    {name = "Joana Pereira", email = "pereira.joanam@gmail.com"},
]
dependencies = [
    "urllib3 == 1.26.14",
    "pandas == 1.4.4",
    "biopython == 1.83",
    "bokeh == 1.3.4",
    "matplotlib == 3.7.4",
    "networkx==2.8.8",
    "numpy == 1.20.0",
    "pillow == 10.2.0",
    "pacmap == 0.7.0",
    "requests == 2.31.0",
    "requests-cache == 1.1.1",
    "scikit-learn == 1.3.2",
    "jinja2==3.0",
    "numba==0.56.4",
    "codetiming==1.4",
    "humanfriendly==11.2",
]
requires-python = "<3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = ["genomic contexts homology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/JoanaMPereira/GCsnap"

[project.scripts]
GCsnap = "gcsnap.GCsnap:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gcsnap"]
